--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,17 @@ server.port=8080
 #spring.datasource.username=postgres
 #spring.datasource.password=root@123
 
-spring.datasource.url=jdbc:postgresql://localhost/demo
-spring.datasource.username=postgres
-spring.datasource.password=root
+#spring.datasource.url=jdbc:postgresql://localhost/demo
+#spring.datasource.username=postgres
+#spring.datasource.password=root
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Change the naming convention of field while mapping to entity
+spring.jackson.property-naming-strategy = SNAKE_CASE
