--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -6,23 +6,24 @@ server.port=8080
 #spring.datasource.username=postgres
 #spring.datasource.password=root@123
 
-#spring.datasource.url=jdbc:postgresql://localhost/demo
-#spring.datasource.username=postgres
-#spring.datasource.password=root
+spring.datasource.url=jdbc:postgresql://localhost/demo
+spring.datasource.username=postgres
+spring.datasource.password=root
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Change the naming convention of field while mapping to entity
 spring.jackson.property-naming-strategy = SNAKE_CASE
 
-spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+ ##### H2 Related properties ######
+#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
