--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
 
 <!-- 		<dependency>
 			<groupId>com.h2database</groupId>
