application.properties modified.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,18 @@
+## Spring applicaiton name and running on port. 
 spring.application.name=rate-manager-api
 server.port=8080
 
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url=jdbc:postgresql://10.10.10.25:5432/ratemgt
-#spring.datasource.username=postgres
-#spring.datasource.password=root@123
-
+## Spring database configuration properties
 spring.datasource.url=jdbc:postgresql://localhost/demo
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+## The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
-
+## Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-# Change the naming convention of field while mapping to entity
+## Change the naming convention of field while mapping to entity
 spring.jackson.property-naming-strategy = SNAKE_CASE
-
- ##### H2 Related properties ######
-#spring.datasource.url=jdbc:h2:mem:AZ;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
