--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=rate-manager-api
 server.port=8080
 
+## Log level
+debug=true
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url=jdbc:postgresql://10.10.10.25:5432/ratemgt
 #spring.datasource.username=postgres
