--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,6 @@ server.port=8080
 ## Log level
 #debug=true
 
-## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-#spring.datasource.url=jdbc:postgresql://10.10.10.25:5432/ratemgt
-#spring.datasource.username=postgres
-#spring.datasource.password=root@123
 
 spring.datasource.url=jdbc:postgresql://localhost/demo
 spring.datasource.username=postgres
@@ -18,7 +14,7 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 ## Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # Change the naming convention of field while mapping to entity
