Added swagger configuration.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ spring.jackson.property-naming-strategy = SNAKE_CASE
 #spring.datasource.username=sa
 #spring.datasource.password=
 #spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+## Actuator endpoints enabled
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
