--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,11 @@ spring.jackson.property-naming-strategy = SNAKE_CASE
 ## Actuator endpoints enabled
 management.endpoints.web.exposure.include=*
 management.endpoint.shutdown.enabled=true
+
+
+## Hibernate log level
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
